Add eslint and prettier

--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@
   margin-top: 60px;
 }
 
-
 #videos {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 2em
+  gap: 2em;
 }
 .video-player {
   background-color: black;
