--- a/style.css
+++ b/style.css
@@ -1,25 +1,41 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
 }
 
-#videos {
+#videos{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2em;
+  grid-template-columns: 1fr;
+  height: 100vh;
+  overflow:hidden;
 }
-.video-player {
+
+.video-player{
   background-color: black;
   width: 100%;
-  height: 300px;
+  height: 100%;
+  object-fit: cover;
 }
-#user-2 {
+
+#user-2{
   display: none;
 }
+
+.smallFrame{
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  height: 170px;
+  width: 300px;
+  border-radius: 5px;
+  border:2px solid #b366f9;
+  -webkit-box-shadow: 3px 3px 15px -1px rgba(0,0,0,0.77);
+  box-shadow: 3px 3px 15px -1px rgba(0,0,0,0.77);
+  z-index: 999;
+}
+
 #controls {
   position: fixed;
   bottom: 20px;
@@ -28,8 +44,9 @@
   display: flex;
   gap: 1em;
 }
+
 .control-container {
-  background-color: rgba(179,102,249,.9);
+  background-color: rgba(179, 102, 249, .9);
   padding: 20px;
   border-radius: 50%;
   display: flex;
@@ -42,6 +59,18 @@
   height: 30px;
   width: 30px;
 }
+
 #leave-btn {
-  background-color: rgba(255,80,80,1);
+  background-color: rgba(255, 80, 80, 1);
+}
+
+@media screen and (max-width: 600px) {
+  .smallFrame { 
+    height: 80px;
+    width: 120px;
+  }
+  .control-container img{
+    width: 20px;
+    height: 20px;
+  }
 }
